VAW-31 VAW-32 VAW-35 Basic UI Setup + Widget/Window base + Logging

--- a/src/Packages/RetroMole.Render.Veldrid/RetroMole.Render.Veldrid.csproj
+++ b/src/Packages/RetroMole.Render.Veldrid/RetroMole.Render.Veldrid.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\RetroMole.Core\RetroMole.Core.csproj" />
+    <ProjectReference Include="..\..\RetroMole.Gui\RetroMole.Gui.csproj" />
     <ProjectReference Include="..\..\..\submodules\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
   </ItemGroup>
 </Project>
