--- a/src/RetroMole.Launch/RetroMole.Launch.csproj
+++ b/src/RetroMole.Launch/RetroMole.Launch.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="spdx" Version="0.2.0" />
