--- a/src/RetroMole.Core/RetroMole.Core.csproj
+++ b/src/RetroMole.Core/RetroMole.Core.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="Spdx" Version="0.2.0" />
+    <PackageReference Include="Tommy" Version="3.1.2" />
   </ItemGroup>
 </Project>
