--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       image: ubuntu-2004:current
     steps:
       - checkout
+      - run: git checkout dev
       - run: git submodule sync
       - run: git submodule update --init
       - run:
@@ -32,6 +33,7 @@ jobs:
       image: ubuntu-2004:current
     steps:
       - checkout
+      - run: git checkout dev
       - run: git submodule sync
       - run: git submodule update --init
       - run:
@@ -56,6 +58,7 @@ jobs:
       image: windows-default
     steps:
       - checkout
+      - run: git checkout dev
       - run: git submodule sync
       - run: git submodule update --init
       - run:
@@ -83,6 +86,7 @@ jobs:
       image: windows-default
     steps:
       - checkout
+      - run: git checkout dev
       - run: git submodule sync
       - run: git submodule update --init
       - run:
