--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ jobs:
             git submodule update --init
 
       - run:
+          name: "Install .NET SDK"
+          command: |
+            wget https://dot.net/v1/dotnet-install.sh
+            ./dotnet-install.sh -c 6.0
+
+      - run:
           name: "Build Native Dependencies with CMake"
           command: |
             mkdir ./binCache
