--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
           name: "Install .NET SDK"
           command: |
             wget https://dot.net/v1/dotnet-install.sh
+            chmod +x ./dotnet-install.sh
             ./dotnet-install.sh -c 6.0
 
       - run:
