--- a/src/RetroMole.Core/RetroMole.Core.csproj
+++ b/src/RetroMole.Core/RetroMole.Core.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Spdx" Version="0.2.0" />
     <PackageReference Include="Tommy" Version="3.1.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\submodules\asar\src\Asar#\Asar#.csproj" />
+  </ItemGroup>
 </Project>
