VAW-39 CISkip | Switch to GH Workflows for build system

--- a/src/RetroMole.Gui/RetroMole.Gui.csproj
+++ b/src/RetroMole.Gui/RetroMole.Gui.csproj
@@ -11,19 +11,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\win-x86\cimgui.dll" CopyToOutputDirectory="PreserveNewest">
+    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\win-x86\cimgui.dll" Condition=" '$(OS)' == 'Windows_NT' " CopyToOutputDirectory="PreserveNewest">
       <PackagePath>runtimes/win-x86/native</PackagePath>
       <Pack>true</Pack>
     </Content>
-    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\win-x64\cimgui.dll" CopyToOutputDirectory="PreserveNewest">
+    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\win-x64\cimgui.dll" Condition=" '$(OS)' == 'Windows_NT' " CopyToOutputDirectory="PreserveNewest">
       <PackagePath>runtimes/win-x64/native</PackagePath>
       <Pack>true</Pack>
     </Content>
-    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\linux-x64\cimgui.so" CopyToOutputDirectory="PreserveNewest">
+    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\linux-x64\cimgui.so" Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' " CopyToOutputDirectory="PreserveNewest">
       <PackagePath>runtimes/linux-x64/native/libcimgui.so</PackagePath>
       <Pack>true</Pack>
     </Content>
-    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\osx\cimgui.dylib" CopyToOutputDirectory="PreserveNewest">
+    <Content Include="..\..\submodules\ImGui.NET\deps\cimgui\osx\cimgui.dylib" Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' " CopyToOutputDirectory="PreserveNewest">
       <PackagePath>runtimes/osx/native/libcimgui.dylib</PackagePath>
       <Pack>true</Pack>
     </Content>
