--- a/src/RetroMole.Launch/RetroMole.Launch.csproj
+++ b/src/RetroMole.Launch/RetroMole.Launch.csproj
@@ -20,6 +20,7 @@
 
   <!-- NUGet Stuff -->
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
