--- a/src/RetroMole.Core/RetroMole.Core.csproj
+++ b/src/RetroMole.Core/RetroMole.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="Spdx" Version="0.2.0" />
