--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "submodules/asar"]
 	path = submodules/asar
 	url = https://github.com/RetroMole/asar.git
-[submodule "submodules/ImGui.NET"]
-	path = submodules/ImGui.NET
-	url = https://github.com/RetroMole/ImGui.NET.git
 [submodule "submodules/Flips"]
 	path = submodules/Flips
 	url = https://github.com/RetroMole/Flips.git
+[submodule "submodules/QuickImGui.NET"]
+	path = submodules/QuickImGui.NET
+	url = https://github.com/Vawlpe/QuickImGui.NET.git
